    primary key reflection on a renamed column.
    [ticket:2291].

- mysql
  - Fixed OurSQL dialect to use ansi-neutral 
    quote symbol "'" for XA commands instead
    of '"'.  [ticket:2186].

  - a CREATE TABLE will put the COLLATE option 
    after CHARSET, which appears to be part of 
    MySQL's arbitrary rules regarding if it will actually
    work or not.  [ticket:2225]

- oracle
  - Added ORA-00028 to disconnect codes, use 
    cx_oracle _Error.code to get at the code,
    [ticket:2200].

  - repaired the oracle.RAW type which did not
    generate the correct DDL.  [ticket:2220]

  - added CURRENT to reserved word list.
    [ticket:2212]

- examples
  - Adjusted dictlike-polymorphic.py example
    to apply the CAST such that it works on 
    PG, other databases.  [ticket:2266]

0.6.8
=====
- orm
  - Calling query.get() against a column-based entity is
    invalid, this condition now raises a deprecation warning.
    [ticket:2144]

  - a non_primary mapper will inherit the _identity_class
    of the primary mapper.  This so that a non_primary
    established against a class that's normally in an
    inheritance mapping will produce results that are 
    identity-map compatible with that of the primary
    mapper [ticket:2151]

  - Backported 0.7's identity map implementation, which
    does not use a mutex around removal.  This as some users 
    were still getting deadlocks despite the adjustments
    in 0.6.7; the 0.7 approach that doesn't use a mutex
    does not appear to produce "dictionary changed size"
    issues, the original rationale for the mutex.  
    [ticket:2148]

  - Fixed the error message emitted for "can't
    execute syncrule for destination column 'q';
    mapper 'X' does not map this column" to 
    reference the correct mapper.  [ticket:2163].

  - Fixed bug where determination of "self referential"
    relationship would fail with no workaround
    for joined-inh subclass related to itself,